--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,17 @@ on:
 
 jobs:
   run_if_label_matches:
-    if: github.event.label.name == 'PUBLISH' || startsWith(github.event.label.name, 'PUBLISH_')
+    if: github.actor == 'eunjae-lee' && (github.event.label.name == 'PUBLISH' || startsWith(github.event.label.name, 'PUBLISH_'))
     runs-on: ubuntu-latest
     steps:
-      - run: node build/index.js
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: node dist/index.js
+        env:
+          TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+          TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+          TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
