--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "notes",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc && vite build && cp dist/index.js build/index.js"
+    "prepare": "husky",
+    "build": "rm -rf dist && ncc build src/main.ts"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
@@ -12,7 +13,11 @@
   },
   "devDependencies": {
     "@types/node": "18.11.17",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "@vercel/ncc": "0.36.0",
+    "husky": "8.0.2",
+    "typescript": "4.9.4"
+  },
+  "engines": {
+    "node": "^16.18.1"
   }
 }
