--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "postinstall": "husky install",
-    "build": "rm -rf dist && ncc build src/main.ts"
+    "build": "rm -rf dist && ncc build src/main.ts",
+    "test": "jest src"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
@@ -13,9 +14,13 @@
     "twitter-api-v2": "^1.12.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-typescript": "7.18.6",
+    "@types/jest": "29.2.4",
     "@types/node": "18.11.17",
     "@vercel/ncc": "0.36.0",
     "husky": "8.0.2",
+    "jest": "29.3.1",
     "typescript": "4.9.4"
   },
   "engines": {
