--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.0.0",
-    "twitter-api-v2": "^1.12.10"
+    "@types/twitter-text": "^3.1.4",
+    "twitter-api-v2": "^1.12.10",
+    "twitter-text": "^3.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "7.20.2",
